welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:15: error: not found: value biscuits
while (2*biscuits!=caseOrange) {
         ^RunHalf:15: error: not found: value caseOrange
while (2*biscuits!=caseOrange) {
                   ^RunHalf:18: error: not found: value biscuits
    biscuits=biscuits+1
    ^RunHalf:21: error: not found: value caseOrange
    caseOrange=caseOrange+1
    ^